# sax-ts

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml
src/: bind.cpp  sax.cpp  sax.h
tests/: reference.py  test_paa.py  test_sax.py
