[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sax_ts"
version = "1.1"
authors = [
    {name = "Stijn J. Rotman", email = "s.j.rotman@uvt.nl"},
]
description = "Symbolic Aggregate approXimation (SAX)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
skip = ["pp*", "*-musllinux_aarch64"]
test-skip = ["*universal2:arm64"]